{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 562,
  "lineage": "8d41101a-400e-f3c5-766c-184f0d7b358d",
  "resources": [
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ogurim_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048e7323a2c55c192",
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:elastic-ip/eipalloc-048e7323a2c55c192",
            "domain": "vpc",
            "id": "eipalloc-048e7323a2c55c192",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-249-240-177.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.240.177",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_wasa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034bc4e4fcccfe844",
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:instance/i-0bd8b9d07ddc57bbe",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd8b9d07ddc57bbe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08cb95acd1e5ae667",
            "private_dns": "ip-192-168-2-11.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a34a1c1171c189c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059977288ffe801a7",
            "tags": {
              "Name": "tokyo-wasa"
            },
            "tags_all": {
              "Name": "tokyo-wasa"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c463b1cb5662602a"
            ]
          },
          "dependencies": [
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc",
            "module.tokyo.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_wasc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034bc4e4fcccfe844",
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:instance/i-0b338af7353c65b70",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b338af7353c65b70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f009fd468cf9f1b2",
            "private_dns": "ip-192-168-3-11.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f761637a0f2c116",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1c39bb0ba098dc2",
            "tags": {
              "Name": "tokyo-wasc"
            },
            "tags_all": {
              "Name": "tokyo-wasc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c463b1cb5662602a"
            ]
          },
          "dependencies": [
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc",
            "module.tokyo.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034bc4e4fcccfe844",
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:instance/i-09f684eca0ab7a65e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f684eca0ab7a65e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002be8175dfefc0bc",
            "private_dns": "ip-192-168-0-11.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.11",
            "public_dns": "ec2-43-206-233-170.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "43.206.233.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9f5fe41fbcb0445",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c300a58503063c9",
            "tags": {
              "Name": "tokyo-weba"
            },
            "tags_all": {
              "Name": "tokyo-weba"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c463b1cb5662602a",
              "sg-0cad1a38ee325b6fb"
            ]
          },
          "dependencies": [
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_security_group.ogurim_web_sg",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc",
            "module.tokyo.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_webc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034bc4e4fcccfe844",
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:instance/i-09de6330c5e8b9f6f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09de6330c5e8b9f6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01167c80d9bd9c0e1",
            "private_dns": "ip-192-168-1-11.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.11",
            "public_dns": "ec2-54-249-38-9.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.38.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08461b803522db39d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9dcf2ac6b97db0c",
            "tags": {
              "Name": "tokyo-webc"
            },
            "tags_all": {
              "Name": "tokyo-webc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c463b1cb5662602a",
              "sg-0cad1a38ee325b6fb"
            ]
          },
          "dependencies": [
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_security_group.ogurim_web_sg",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc",
            "module.tokyo.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ogurim_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:internet-gateway/igw-021ea2ddffee00dee",
            "id": "igw-021ea2ddffee00dee",
            "owner_id": "339713119714",
            "tags": {
              "Name": "tokyo-ig"
            },
            "tags_all": {
              "Name": "tokyo-ig"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ogurim_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:loadbalancer/app/tokyo-lb/f0c71489e4bee793",
            "arn_suffix": "app/tokyo-lb/f0c71489e4bee793",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tokyo-lb-653751137.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:loadbalancer/app/tokyo-lb/f0c71489e4bee793",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tokyo-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c463b1cb5662602a",
              "sg-0cad1a38ee325b6fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c300a58503063c9"
              },
              {
                "subnet_id": "subnet-0f9dcf2ac6b97db0c"
              }
            ],
            "subnets": [
              "subnet-05c300a58503063c9",
              "subnet-0f9dcf2ac6b97db0c"
            ],
            "tags": {
              "Name": "tokyo-lb"
            },
            "tags_all": {
              "Name": "tokyo-lb"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_security_group.ogurim_web_sg",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ogurim_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:listener/app/tokyo-lb/f0c71489e4bee793/11bd3840e0f5d510",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:targetgroup/tokyo-albtg/aeeaaa7f833253ae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:listener/app/tokyo-lb/f0c71489e4bee793/11bd3840e0f5d510",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:loadbalancer/app/tokyo-lb/f0c71489e4bee793",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "tokyo-albli"
            },
            "tags_all": {
              "Name": "tokyo-albli"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo.aws_lb.ogurim_lb",
            "module.tokyo.aws_lb_target_group.ogurim_albtg",
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_security_group.ogurim_web_sg",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ogurim_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:targetgroup/tokyo-albtg/aeeaaa7f833253ae",
            "arn_suffix": "targetgroup/tokyo-albtg/aeeaaa7f833253ae",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:339713119714:targetgroup/tokyo-albtg/aeeaaa7f833253ae",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyo-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tokyo-albtg"
            },
            "tags_all": {
              "Name": "tokyo-albtg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ogurim_nig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048e7323a2c55c192",
            "association_id": "eipassoc-05296d34934ed6257",
            "connectivity_type": "public",
            "id": "nat-079a0289906305af1",
            "network_interface_id": "eni-0e9094bc899eb22da",
            "private_ip": "192.168.0.21",
            "public_ip": "54.249.240.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c300a58503063c9",
            "tags": {
              "Name": "tokyo-nig"
            },
            "tags_all": {
              "Name": "tokyo-nig"
            }
          },
          "dependencies": [
            "module.tokyo.aws_eip.ogurim_eip",
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_nrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:route-table/rtb-042035430639cb55c",
            "id": "rtb-042035430639cb55c",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-079a0289906305af1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-nrt"
            },
            "tags_all": {
              "Name": "tokyo-nrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo.aws_eip.ogurim_eip",
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_nat_gateway.ogurim_nig",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:route-table/rtb-0bae6815a02a64969",
            "id": "rtb-0bae6815a02a64969",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021ea2ddffee00dee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-rt"
            },
            "tags_all": {
              "Name": "tokyo-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3218a67d5fa3d02",
            "route_table_id": "rtb-042035430639cb55c",
            "subnet_id": "subnet-05b9073efd824331c"
          },
          "dependencies": [
            "module.tokyo.aws_eip.ogurim_eip",
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_nat_gateway.ogurim_nig",
            "module.tokyo.aws_route_table.ogurim_nrt",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0524b777576391ce8",
            "route_table_id": "rtb-042035430639cb55c",
            "subnet_id": "subnet-0812c80eafbcae4b1"
          },
          "dependencies": [
            "module.tokyo.aws_eip.ogurim_eip",
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_nat_gateway.ogurim_nig",
            "module.tokyo.aws_route_table.ogurim_nrt",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_w",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db8123424af57c15",
            "route_table_id": "rtb-042035430639cb55c",
            "subnet_id": "subnet-059977288ffe801a7"
          },
          "dependencies": [
            "module.tokyo.aws_eip.ogurim_eip",
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_nat_gateway.ogurim_nig",
            "module.tokyo.aws_route_table.ogurim_nrt",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094057478f50847ea",
            "route_table_id": "rtb-042035430639cb55c",
            "subnet_id": "subnet-0c1c39bb0ba098dc2"
          },
          "dependencies": [
            "module.tokyo.aws_eip.ogurim_eip",
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_nat_gateway.ogurim_nig",
            "module.tokyo.aws_route_table.ogurim_nrt",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_rtas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c37ae2fb1698d13a",
            "route_table_id": "rtb-0bae6815a02a64969",
            "subnet_id": "subnet-05c300a58503063c9"
          },
          "dependencies": [
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_route_table.ogurim_rt",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a8c9495bad2cde7",
            "route_table_id": "rtb-0bae6815a02a64969",
            "subnet_id": "subnet-0f9dcf2ac6b97db0c"
          },
          "dependencies": [
            "module.tokyo.aws_internet_gateway.ogurim_ig",
            "module.tokyo.aws_route_table.ogurim_rt",
            "module.tokyo.aws_subnet.ogurim_subnet",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:security-group/sg-016c4d4adf5fa050d",
            "description": "default-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016c4d4adf5fa050d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c463b1cb5662602a"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c463b1cb5662602a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tokyo-db-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-db-sg"
            },
            "tags_all": {
              "Name": "tokyo-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:security-group/sg-0c463b1cb5662602a",
            "description": "default-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c463b1cb5662602a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tokyo-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg"
            },
            "tags_all": {
              "Name": "tokyo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:security-group/sg-0cad1a38ee325b6fb",
            "description": "default-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cad1a38ee325b6fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker",
                "from_port": 60080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c463b1cb5662602a"
                ],
                "self": false,
                "to_port": 60080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c463b1cb5662602a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-web-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-web-sg"
            },
            "tags_all": {
              "Name": "tokyo-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo.aws_security_group.ogurim_sg",
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:subnet/subnet-05c300a58503063c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c300a58503063c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-weba"
            },
            "tags_all": {
              "Name": "tokyo-weba"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:subnet/subnet-0f9dcf2ac6b97db0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9dcf2ac6b97db0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-webc"
            },
            "tags_all": {
              "Name": "tokyo-webc"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:subnet/subnet-059977288ffe801a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059977288ffe801a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-wasa"
            },
            "tags_all": {
              "Name": "tokyo-wasa"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:subnet/subnet-0c1c39bb0ba098dc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1c39bb0ba098dc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-wasc"
            },
            "tags_all": {
              "Name": "tokyo-wasc"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:subnet/subnet-05b9073efd824331c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b9073efd824331c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-dba"
            },
            "tags_all": {
              "Name": "tokyo-dba"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:subnet/subnet-0812c80eafbcae4b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0812c80eafbcae4b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-dbc"
            },
            "tags_all": {
              "Name": "tokyo-dbc"
            },
            "vpc_id": "vpc-0e1bf5a4dc3280952"
          },
          "dependencies": [
            "module.tokyo.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ogurim_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339713119714:vpc/vpc-0e1bf5a4dc3280952",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-085cf7bcfdb55a7be",
            "default_route_table_id": "rtb-02e69164f39258d45",
            "default_security_group_id": "sg-0f649933ffa9698f4",
            "dhcp_options_id": "dopt-030469ea1580fda87",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1bf5a4dc3280952",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e69164f39258d45",
            "owner_id": "339713119714",
            "tags": {
              "Name": "tokyo-vpc"
            },
            "tags_all": {
              "Name": "tokyo-vpc"
            }
          }
        }
      ]
    }
  ]
}